fixed spacing and outlines

--- a/Frontend/src/components/Authentication/InputField.css
+++ b/Frontend/src/components/Authentication/InputField.css
@@ -4,17 +4,29 @@
   background-color: rgb(255, 255, 255);
   color: #525252;
 
-  width: calc(100% - 12px);
+  width: 100%;
   height: 40px;
 
-  margin: 23px 0 0 0;
+  margin: 10px 0 20px 0;
   padding: 0 0 0 10px;
 
   border-radius: 3px;
   border: 1px solid #b2b2b2;
-  transition: border-bottom-color 0.3s ease-in;
+  /*transition: border-bottom-color 0.4s ease-in; */
 
   font-size: 1rem;
+  outline-width: 0;
+}
+
+.invalid:focus,
+.valid:focus {
+  border-left: 2px solid #525252;
+  border-top: 2px solid #525252;
+  border-right: 2px solid #525252;
+}
+
+.unset:focus {
+  border: 2px solid #525252;
 }
 
 .invalid {
@@ -24,14 +36,6 @@
 .valid {
   border-bottom: 3px solid green;
 }
-
-.inputField:focus {
-  outline-color: #525252;
-}
-
-/* .title {
-    margin-top: 10px;
-} */
 
 label {
   float: left;
